Fix login screen on smaller viewport

--- a/client/app/assets/less/server.less
+++ b/client/app/assets/less/server.less
@@ -49,6 +49,16 @@ hr {
   width: 500px;
 }
 
+@media (max-width: 767px) {
+  .fixed-width-page {
+    width: auto;
+
+    form .form-control {
+      width: 225px;
+    }
+  }
+}
+
 .login-button {
   display: flex;
   align-items: center;
